# golden-bridge

./: ARCHITECTURE.md  Cargo.toml  flake.nix
src/: error.rs  ingest.rs  lib.rs
tests/: spirit_bridge.rs
tests/fixtures/: PROVENANCE.md
